# flexibilizacion-laboral-lct

./: .env  .gitignore  Dictamen DE MODERNIZACIÓN LABORAL.docx  Dictamen DE MODERNIZACIÓN LABORAL.txt  EJEMPLO_ESTRUCTURA.md  GEMINI.md  LEY DE CONTRATO DE TRABAJO.docx  LEY DE CONTRATO DE TRABAJO.txt  QA.md  README.md  README_GITHUB_PAGES.md  app.js  batch_scraper.py  consultar_ley.py  convertir_json_oficial_final.py  dictamen_modernizacion_laboral_parsed.json  dictamen_modernizacion_laboral_titulo_I.json  dictamen_modernizacion_laboral_titulo_III.json  dictamen_modernizacion_laboral_titulo_IV.json  dictamen_modernizacion_laboral_titulo_IX.json  dictamen_modernizacion_laboral_titulo_V.json  dictamen_modernizacion_laboral_titulo_VI.json  dictamen_modernizacion_laboral_titulo_VII.json  dictamen_modernizacion_laboral_titulo_VIII.json  dictamen_modernizacion_laboral_titulo_X.json  dictamen_modernizacion_laboral_titulo_XI.json  dictamen_modernizacion_laboral_titulo_XIV.json  dictamen_modernizacion_laboral_titulo_XV.json  dictamen_modernizacion_laboral_titulo_XVI.json  dictamen_modernizacion_laboral_titulo_XVII.json  dictamen_modernizacion_laboral_titulo_XVIII.json  dictamen_modernizacion_laboral_titulo_XX.json  dictamen_modernizacion_laboral_titulo_XXI.json  dictamen_modernizacion_laboral_titulo_XXIII.json  dictamen_modernizacion_laboral_titulo_XXIV.json  dictamen_modernizacion_laboral_titulo_XXV.json  dictamen_modernizacion_laboral_titulo_XXVI.json  dictamen_parseado.json  dictamen_parseado_full.json  dictamen_parseado_full_normalizado.txt  (+11 more)
saij-data/: 14250-tor-20040831.json  (+7 more)
(+127 files in other folders)
