[project]
name = "saij-data"
version = "0.1.0"
description = "Scraper para obtener información semiestructurada de legislación argentina desde SAIJ"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

